renamed auth-server to auth-service and login added
